--- a/front/src/app/layout/login/pages/login/login.component.html
+++ b/front/src/app/layout/login/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <form class="login" [formGroup]="formGroup" (ngSubmit)="submit()">
     <div class="login-box"></div>
 
-    <div class="login-user d-flex flex-column align-items-center justify-content-between">
+    <div class="login-user d-flex flex-column align-items-center justify-content-between gap-5">
         <div class="login-logo">
             <img src="assets/logo.jpg" alt="logo" class="logo">
         </div>
