--- a/front/src/app/layout/upload-course/components/preview/preview.component.html
+++ b/front/src/app/layout/upload-course/components/preview/preview.component.html
@@ -1,6 +1,18 @@
 <div class="preview">
     <div class="view"></div>
-    <h3>Titulo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero unde est architecto aliquam non quo vel voluptas tenetur iure, earum, nulla incidunt. Voluptatem quae dolor, pariatur beatae aperiam asperiores distinctio.
-    Quia possimus repellat id error laborum? Fugiat voluptate voluptatem, molestias provident, repellendus et repudiandae eaque velit quod soluta totam! Corrupti sapiente cupiditate praesentium, totam pariatur enim assumenda? A, tempora dignissimos!</p>
+    <div class="text d-flex flex-column justify-content-start align-items-center gap-3">
+        <h3>
+            @if(titulo.length === 0) {
+                Título
+            } @else {
+                {{titulo}}
+            }
+        </h3>
+
+        @if(descripcion.length === 0) {
+            <p class="descripcion-none">Descripcion del video</p>
+        } @else {
+            <p class="descripcion">{{descripcion}}</p>
+        }
+    </div>
 </div>
