--- a/front/src/app/layout/upload-course/pages/upload/upload.component.html
+++ b/front/src/app/layout/upload-course/pages/upload/upload.component.html
@@ -1,8 +1,8 @@
 <div class="upload">
-    <aside class="">
+    <section class="">
         <app-form/>
-    </aside>
-    <aside class="">
+    </section>
+    <section class="">
         <app-preview/>
-    </aside>
+    </section>
 </div>
