agregando funcion de busqueda de usuarios

--- a/front/src/app/layout/user/pages/user/user.component.html
+++ b/front/src/app/layout/user/pages/user/user.component.html
@@ -1,6 +1,17 @@
 <div class="container">
     <div class="search">
-        <input type="text" placeholder="Buscar usuario">
+        <div class="input">
+            <input id="input" type="text" placeholder="Buscar usuario">
+            <button class="btn btn-search" (click)="search()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="24" height="24"
+                    viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+                    <path d="M21 21l-6 -6" />
+                </svg>
+            </button>
+
+        </div>
     </div>
 
     <div class="button">
@@ -12,6 +23,7 @@
     <table class="user">
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Nombres</th>
                 <th>Usuario</th>
                 <th>Rol</th>
@@ -22,6 +34,7 @@
             @if(mostrarUsuarios) {
                 @for(usuario of usuarios; track usuario.id) {
                     <tr>
+                        <td>{{usuario.id}}</td>
                         <td>{{usuario.nombres}} <span class="d-block">{{usuario.apellido_P}} {{usuario.apellido_M}}</span></td>
                         <td>{{usuario.nombre_U}}</td>
                         <td>{{roles[usuario.id]}}</td>
