--- a/front/src/app/layout/user/pages/user/user.component.html
+++ b/front/src/app/layout/user/pages/user/user.component.html
@@ -1,8 +1,16 @@
 <div class="container">
     <div class="search">
         <div class="input">
-            <input id="input" type="text" placeholder="Buscar usuario">
-            <button class="btn btn-search" (click)="search()">
+            <button class="btn btn-clean" (click)="limpiarBusqueda()">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24"
+                    viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M18 6l-12 12" />
+                    <path d="M6 6l12 12" />
+                </svg>
+            </button>
+            <input #input type="text" placeholder="Buscar usuario">
+            <button class="btn btn-search" (click)="buscar()">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="24" height="24"
                     viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -23,10 +31,31 @@
     <table class="user">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Nombres</th>
-                <th>Usuario</th>
-                <th>Rol</th>
+                <th (click)="ordenarPorID()"><div class="">ID <span class="row" [ngClass]="ascDescId ? 'row-up': 'row-down'">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16"
+                        viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M4 13l8 -3l8 3" />
+                    </svg>
+                </span></div></th>
+                <th (click)="ordenarPorNombre()"><div class="">Nombres <span class="row" [ngClass]="ascDescNombre ? 'row-up': 'row-down'">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M4 13l8 -3l8 3" />
+                    </svg>
+                </span></div></th>
+                <th (click)="ordenarPorUsuario()"><div class="">Usuario <span class="row" [ngClass]="ascDescUsername ? 'row-up': 'row-down'">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M4 13l8 -3l8 3" />
+                    </svg>
+                </span></div></th>
+                <th (click)="ordenarPorRol()"><div class="">Rol <span class="row" [ngClass]="ascDescRol ? 'row-up': 'row-down'">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M4 13l8 -3l8 3" />
+                    </svg>
+                </span></div></th>
                 <th>Acción</th>
             </tr>
         </thead>
@@ -39,7 +68,7 @@
                         <td>{{usuario.nombre_U}}</td>
                         <td>{{roles[usuario.id]}}</td>
                         <td class="td">
-                            <div class="d-flex align-items-center justify-content-center gap-3">
+                            <div class="d-flex align-items-center justify-content-center gap-5">
                                 <div class="editar" (click)="editarUsuario(usuario.id)">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="20" height="20"
                                         viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
