--- a/front/src/app/layout/main/components/side-main/side-main.component.scss
+++ b/front/src/app/layout/main/components/side-main/side-main.component.scss
@@ -59,9 +59,15 @@
             }
         }
 
-        .btn-pink {
-            width: 80%;
-            margin: 4rem auto;
+        
+        .botones {
+            width: 85%;
+            margin: 0 auto;
+            
+            .btn-pink {
+                width: 100%;
+                margin: 1rem auto;
+            }
         }
     }
 }
