--- a/front/src/app/layout/user/pages/user/user.component.html
+++ b/front/src/app/layout/user/pages/user/user.component.html
@@ -9,7 +9,9 @@
                     <path d="M6 6l12 12" />
                 </svg>
             </button>
-            <input #input type="text" placeholder="Buscar usuario">
+
+            <input #input type="text" placeholder="Buscar usuario" (keydown.enter)="buscar()">
+            
             <button class="btn btn-search" (click)="buscar()">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="24" height="24"
                     viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -20,7 +22,7 @@
             </button>
 
         </div>
-    </div>
+    </div> <!-- fin de la busqueda -->
 
     <div class="button">
         <button class="btn btn-pink btn-setting" (click)="onClick()">Nuevo</button>
@@ -32,33 +34,44 @@
         <thead>
             <tr>
                 <th (click)="ordenarPorID()"><div class="">ID <span class="row" [ngClass]="ascDescId ? 'row-up': 'row-down'">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16"
-                        viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" 
+                    width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" 
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M4 13l8 -3l8 3" />
                     </svg>
                 </span></div></th>
+
                 <th (click)="ordenarPorNombre()"><div class="">Nombres <span class="row" [ngClass]="ascDescNombre ? 'row-up': 'row-down'">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" 
+                    width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" 
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M4 13l8 -3l8 3" />
                     </svg>
                 </span></div></th>
+                
                 <th (click)="ordenarPorUsuario()"><div class="">Usuario <span class="row" [ngClass]="ascDescUsername ? 'row-up': 'row-down'">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" 
+                    width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" 
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M4 13l8 -3l8 3" />
                     </svg>
                 </span></div></th>
+                
                 <th (click)="ordenarPorRol()"><div class="">Rol <span class="row" [ngClass]="ascDescRol ? 'row-up': 'row-down'">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up" 
+                    width="16" height="16" viewBox="0 0 24 24" stroke-width="2.5" stroke="#ffffff" 
+                    fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M4 13l8 -3l8 3" />
                     </svg>
                 </span></div></th>
+                
                 <th>Acción</th>
             </tr>
-        </thead>
+        </thead> <!-- fin de la cabecera -->
         <tbody>
             @if(mostrarUsuarios) {
                 @for(usuario of usuarios; track usuario.id) {
@@ -89,11 +102,11 @@
                                         <path d="M10 12l4 4m0 -4l-4 4" />
                                     </svg>
                                 </div>
-                            </div>
+                            </div> <!-- td -->
                         </td>
                     </tr>
                 }
             }
-        </tbody>
-    </table>
+        </tbody> <!-- fin del cuepo-->
+    </table> <!-- fin fr la tabla -->
 </div>
