--- a/front/src/app/layout/index/components/navigation/navigation.component.html
+++ b/front/src/app/layout/index/components/navigation/navigation.component.html
@@ -9,5 +9,15 @@
 
     <div class="line"></div>
 
-    <p>{{rol}}</p>
+    <div class="d-flex flex-column align-items-center">
+        <p>{{rol}}</p>
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-logout mt-3" width="24" height="24"
+            viewBox="0 0 24 24" stroke-width="1.5" stroke="#2dc6fc" fill="none" stroke-linecap="round" stroke-linejoin="round"
+            (click)="logout()">
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
+            <path d="M9 12h12l-3 -3" />
+            <path d="M18 15l3 -3" />
+        </svg>
+    </div>
 </nav>
