--- a/front/src/app/layout/upload-course/components/preview/preview.component.html
+++ b/front/src/app/layout/upload-course/components/preview/preview.component.html
@@ -1,5 +1,9 @@
 <div class="preview">
-    <div class="view"></div>
+    @if(imagen) {
+        <img class="img" [src]="imagen" alt="miniatura">
+    } @else {
+        <div class="view"></div>
+    }
     <div class="text d-flex flex-column justify-content-start align-items-center gap-3">
         <h3>
             @if(titulo.length === 0) {
