--- a/front/src/app/layout/upload-course/components/form/form.component.scss
+++ b/front/src/app/layout/upload-course/components/form/form.component.scss
@@ -4,12 +4,9 @@
     background-color: m.$bg-navigation;
     border-radius: 1.5rem;
     width: 55rem;
-    height: 55rem;
+    min-height: 55rem;
+    height: auto;
     padding: 4rem 0;
-
-    @include m.pc-mediano { 
-        height: 65rem;
-    }
 
     .div-file {
         margin: 0 auto;
