--- a/front/src/app/layout/upload-course/pages/upload/upload.component.scss
+++ b/front/src/app/layout/upload-course/pages/upload/upload.component.scss
@@ -1,13 +1,30 @@
 @use '../../../../../styles.scss' as m;
 
 .upload {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    
     height: 85vh;
     margin-top: 5rem;
 
-    @include m.pc-mediano {
-        margin: 0;
+    .mensaje {
+        text-align: center;
+        font-size: 2rem;
+        padding: 1rem;
+        color: m.$color-text-login;
+        background-color: m.$color-btn-login;
+        width: 50%;
+        border-radius: 1rem;
+        
+        &.show-mensaje {
+            opacity: 1;
+            margin: 2rem auto !important;
+            transition: all .2s ease-in;
+        }
+        
+        &.hidden-mensaje {
+            opacity: 0;
+            margin: 0!important;
+            transition: all .2s ease-out;
+
+        }
     }
 }
