filtros y visualizacion de cursos concluidos

--- a/front/src/app/layout/main/components/courses/courses.component.html
+++ b/front/src/app/layout/main/components/courses/courses.component.html
@@ -3,13 +3,13 @@
 
     <div class="courses">
         @for(curso of cursos; track curso) {
-        <div class="course">
-            <img [src]="miniaturas[curso.id]?.tumbnaiUrl" alt="Imagen del curso" class="course-img">
+        <div class="course" (click)="navegar(curso)">
+            <img class="course-img" [src]="miniaturas[curso.id]?.tumbnaiUrl" alt="Imagen del curso">
         
             <div class="course-info">
                 <h3>{{curso.titulo}}</h3>
                 <p class="auth">{{usuarios[curso.usuario_id]}}</p>
-                <p>Especialidad: <span class="text-uppercase">{{curso.tema}}</span></p>
+                <p class="meteria">Especialidad: <span>{{curso.tema}}</span></p>
             </div>
         </div>
         }
