--- a/front/src/app/layout/view-course/pages/view/view.component.html
+++ b/front/src/app/layout/view-course/pages/view/view.component.html
@@ -1,1 +1,4 @@
-<p>view works!</p>
+<main class="curso">
+    <app-video class="lateral"></app-video>
+    <app-video-list></app-video-list>
+</main>
